# adtf_file

./: CMakeLists.txt  CMakeLists.txt.install  README.md
doc/input/: adtf_file_documentation.md  page_adtf2_datfile_layout.md  page_delivered_versions.md  page_delivered_versions.md.in  page_examples.md  used_licenses.md
doc/license/: MPL2.0.txt
scripts/cmake/: set_library_naming_conventions.cmake
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/canwriter/: CMakeLists.txt  canwriter.cpp
src/examples/canwriter/adtfproject/canwriter/: canwriter.adtfproject
src/examples/canwriter/adtfproject/canwriter/adtfsessions/: ADTF CAN Playback.adtfsession  ADTF CAN Playback.adtfuilayout
src/examples/canwriter/adtfproject/canwriter/adtfsessions/adtfgraphs/: ADTF CAN Playback.adtfconfiglayout  ADTF CAN Playback.adtfgraph  ADTF CAN Playback.adtfproperties
src/examples/canwriter/adtfproject/canwriter/adtfsessions/adtfsystems/: ADTF CAN Playback.adtfproperties  ADTF CAN Playback.adtfsystem
src/examples/canwriter/adtfproject/canwriter_adtf2/: canwriter_adtf2.prj
src/examples/canwriter/adtfproject/canwriter_adtf2/config/: system.Common.runninglayout  system.config_layout  system.xml
src/examples/canwriter/adtfproject/canwriter_adtf2/config/system_config_files/Playback/: __kernel_scheduling.config
src/examples/canwriter/adtfproject/canwriter_adtf2/config/system_config_files/Recording/: __kernel_scheduling.config  __layout_settings.config
src/examples/csv_processor/test/: CMakeLists.txt
src/examples/csv_reader/: readme.txt
src/examples/csv_reader/test/: CMakeLists.txt
src/examples/fileaccess/: fileaccess.cpp
src/examples/trigonometry_reader/: CMakeLists.txt  plugin.cpp  readme.txt  trigonomentry_reader.cpp  trigonomentry_reader.h
src/examples/trigonometry_reader/test/: CMakeLists.txt  test_trigonometry_reader.cpp
src/libraries/: CMakeLists.txt
src/libraries/adtf_file/: CMakeLists.txt  adtf_file_test_projects.cmake
src/libraries/adtf_file/include/adtf_file/: adtf_file_reader.h  base_reader.h  default_sample.h  file_extensions.h  legacy_utils4_utils5_types.h
src/libraries/adtf_file/src/: adtf_file_reader.cpp  file_extensions.cpp
src/libraries/adtf_file/test/adtf_file_reader/src/: CMakeLists.txt
src/libraries/adtf_file/test/adtf_file_writer/src/: CMakeLists.txt
src/libraries/adtf_file/test/base_reader/src/: CMakeLists.txt  tester_base_reader.cpp
src/libraries/adtf_file/test/plugins/src/: CMakeLists.txt
src/libraries/adtf_file/test/referencedfiles/src/: CMakeLists.txt
src/libraries/adtf_file/test/serializations/src/: CMakeLists.txt
src/libraries/adtfdat_processing/: CMakeLists.txt  adtfdat_processing_test_projects.cmake
src/libraries/adtfdat_processing/include/adtfdat_processing/: adtfdat_file_reader.h  configuration.h  reader.h
src/libraries/adtfdat_processing/src/: adtfdat_file_reader.cpp  reader.cpp
src/libraries/adtfdat_processing/test/: CMakeLists.txt  test_reader.cpp
src/libraries/ifhd_file/: CMakeLists.txt  ifhd_test_projects.cmake
src/libraries/ifhd_file/include/ifhd/v110/: indexedfile_v110.h  indexedfilereader_v110.h
src/libraries/ifhd_file/include/ifhd/v201_v301/: indexedfile_types_v201_v301.h  indexedfilehelper_v201_v301.h
src/libraries/ifhd_file/include/ifhd/v400/: indexedfilehelper_v400.h
src/libraries/ifhd_file/include/ifhd/v500/: indexedfilehelper_v500.h
src/libraries/ifhd_file/src/: indexedfile_v100.cpp  indexedfile_v110.cpp  indexedfile_v201_v301.cpp  indexedfile_v400.cpp  indexedfilehelper_v201_v301.cpp  indexedfilehelper_v400.cpp  indexedfilereader_v110.cpp  indexedfilewriter_v201_v301.cpp  indexreadtable_v201_v301.cpp
src/libraries/ifhd_file/test/file/cIF/files/: old.compat
src/libraries/ifhd_file/test/file/cIF/src/: CMakeLists.txt
src/libraries/ifhd_file/test/file/cIFHelper/src/: CMakeLists.txt
src/libraries/ifhd_file/test/file/cIFReader/src/: CMakeLists.txt  tester_indexedfilereader.cpp
src/libraries/ifhd_file/test/file/cIFWriter/src/: CMakeLists.txt  tester_indexedfilewriter.cpp
src/libraries/ifhd_file/test/file/test_helper/: test_helper.h
src/libraries/utils5extension/: CMakeLists.txt
src/libraries/utils5extension/include/utils5extension/: utils5extension.h
src/libraries/utils5extension/src/: file.cpp
src/tools/adtf_dattool/: CMakeLists.txt  adtf_dattool.cpp  adtf_dattool_test_projects.cmake
src/tools/adtf_dattool/test/dattool/: CMakeLists.txt
test/: CMakeLists.txt  test_setup.h
test/function/: CMakeLists.txt
test/private/install_complete/: reference.yaml
